# sign_scheme

./: .gitignore  CMakeLists.txt  README.md  compile.sh  config.env.example  sign.cfg
analytics/: .gitignore  graph.py  main.py  matrix.py  raw.py  split_data.py
cmake/: SignSchemeConfig.cmake  SignSchemeConfig.cmake.in  SignSchemeConfigVersion.cmake
include/: sign_scheme.h  sign_scheme_definitions.h
key_gen/: Makefile  README.md  main.c
src/: sign_scheme.c
src/ecdsa/: ecdsa.h  key_gen.c  read_key.c  sign.c  verify.c
src/eddsa/: dev.c  eddsa.h  key_gen.c  read_key.c  sign.c  verify.c
src/helper/: diskio.h  ff_gen_drv.h  ffconf.h  helper.h  int2uc.c  io.c  io.h  uc2int.c  utilsign.h
src/no_sign/: key_gen.c  no_sign.h  read_key.c  sign.c  verify.c
src/rsa/: key_gen.c  read_key.c  rsa.h  sign.c  verify.c
